// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilmDetailsPage component should be rendered correctly 1`] = `
<PageGrid
  container={true}
  direction="column"
  wrap="nowrap"
>
  <Header
    content={
      <FilmDetails
        filmDetails={
          Object {
            "budget": 100000000,
            "genres": Array [
              "Drama",
              "Western",
            ],
            "id": 68718,
            "overview": "With the help of a German bounty hunter, a freed slave sets out to rescue his wife from a brutal Mississippi plantation owner.",
            "poster_path": "https://image.tmdb.org/t/p/w500/5WJnxuw41sddupf8cwOxYftuvJG.jpg",
            "release_date": "2012-12-25",
            "revenue": 425368238,
            "runtime": 165,
            "tagline": "Life, liberty and the pursuit of vengeance.",
            "title": "Django Unchained",
            "vote_average": 7.9,
            "vote_count": 12144,
          }
        }
      />
    }
    hasSearch={true}
  />
  <SplitPane
    left={
      <ForwardRef
        fontcolor="#212121"
        variant="subtitle2"
      >
        Films by
         
        <strong>
          Drama, Western
        </strong>
      </ForwardRef>
    }
    right={false}
  />
  <PageContentWrapper>
    <Connect(FilmsList) />
  </PageContentWrapper>
  <Footer />
</PageGrid>
`;

exports[`FilmDetailsPage component should be rendered correctly with film details loading 1`] = `
<PageGrid
  container={true}
  direction="column"
  wrap="nowrap"
>
  <Header
    content={
      <Loader
        loaderColor="#ec407a"
        size="90px"
      />
    }
    hasSearch={true}
  />
  <SplitPane
    left={
      <Loader
        loaderColor="#ec407a"
        size="30px"
      />
    }
    right={false}
  />
  <PageContentWrapper>
    <Connect(FilmsList) />
  </PageContentWrapper>
  <Footer />
</PageGrid>
`;

exports[`FilmDetailsPage component should be rendered correctly with films by genres loading 1`] = `
<PageGrid
  container={true}
  direction="column"
  wrap="nowrap"
>
  <Header
    content={
      <Loader
        loaderColor="#ec407a"
        size="90px"
      />
    }
    hasSearch={true}
  />
  <SplitPane
    left={
      <Loader
        loaderColor="#ec407a"
        size="30px"
      />
    }
    right={false}
  />
  <PageContentWrapper>
    <Loader
      loaderColor="#ec407a"
      size="90px"
    />
  </PageContentWrapper>
  <Footer />
</PageGrid>
`;
